# monotone-crescendo

./: .gitignore  Cargo.toml  README.md  build-demo.sh  demo.html  deploy-gh-pages.sh  index.html  monotone_crescendo.wasm
.cargo/: config
demo/: index.html  monotone_crescendo.wasm
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/monotone_crescendo/: all.html  fn.alloc.html  fn.dealloc.html  fn.make_me_monotone_crescendo.html  fn.monotone_crescendo_prefix_sums.html  fn.monotone_crescendo_prefix_sums_without_redundant_zero.html  fn.monototone_crescendo.html  fn.monototone_crescendo_cumulative.html  index.html  sidebar-items.js
doc/monotone_crescendo/ffi/: fn.alloc.html  fn.dealloc.html  fn.make_me_monotone_crescendo.html  index.html  sidebar-items.js
doc/monotone_crescendo/solution/: fn.monotone_crescendo_prefix_sums.html  fn.monotone_crescendo_prefix_sums_without_redundant_zero.html  fn.monototone_crescendo_cumulative.html  index.html  sidebar-items.js
doc/monotone_crescendo/wasm_memory/: fn.alloc.html  fn.call_solution_with_input.html  fn.dealloc.html  fn.make_me_monotone_crescendo.html  index.html  sidebar-items.js
doc/src/monotone_crescendo/: lib.rs.html
src/: lib.rs  main.rs
