[package]
name = "monotone-crescendo"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A library designed for use in WebAssembly that implements solutions to LeetCode #926"
homepage = "https://hamburgchimps.github.io/monotone-crescendo/"
documentation = "https://hamburgchimps.github.io/monotone-crescendo/doc/monotone_crescendo/"
repository = "https://github.com/HamburgChimps/monotone-crescendo"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
